--- a/index.html
+++ b/index.html
@@ -1,22 +1,17 @@
-<!DOCTYPE html>
-<html lang="en">
+<!DOCTYPE html><html lang="en">
 <head>
-  <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>CodePixel RGB Pro Max</title>
-  <link rel="stylesheet" href="style.css" />
+  <meta charset="UTF-8">
+  <title> Pixel Converter Pro Max™</title>
+  <link rel="stylesheet" href="style.css">
+  <script src="https://cdn.jsdelivr.net/npm/html2canvas@1.4.1/dist/html2canvas.min.js"></script>
 </head>
 <body>
-  <h1>🎨 CodePixel RGB Pro Max</h1>
-
-  <input type="file" id="fileInput" accept="image/*,video/*" />
-  <button id="convertBtn">Convert</button>
-  <button id="exportBtn">Export Code</button>
-  <button id="saveBtn">Save Image</button>
-
-  <div id="output" class="ascii-output"></div>
-
-  <script src="ascii.js"></script>
-  <script src="export.js"></script>
-</body>
+  <h1>🎨 Pixel Code Converter</h1>
+  <input type="file" id="fileInput" accept="image/*,video/*">
+  <br>
+  <button id="convertBtn">⚙️ Convert</button>
+  <button id="exportBtn">💾 Lưu ảnh</button>
+  <button id="exportTextBtn">📄 Xuất mã ASCII</button>
+  <button id="exportVideoBtn">🎥 Ghi video pixel</button>
+  <div id="output"></div>  <script src="ascii.js"></script>  <script src="export.js"></script></body>
 </html>
