--- a/index.html
+++ b/index.html
@@ -1,17 +1,24 @@
-<!DOCTYPE html><html lang="en">
+<!DOCTYPE html>
+<html lang="en">
 <head>
-  <meta charset="UTF-8">
-  <title> Pixel Converter Pro Max™</title>
-  <link rel="stylesheet" href="style.css">
-  <script src="https://cdn.jsdelivr.net/npm/html2canvas@1.4.1/dist/html2canvas.min.js"></script>
+  <meta charset="UTF-8" />
+  <title>ASCII Converter Pro Max</title>
+  <link rel="stylesheet" href="style.css" />
 </head>
+<script src="https://cdnjs.cloudflare.com/ajax/libs/html2canvas/1.4.1/html2canvas.min.js"></script>
 <body>
-  <h1>🎨 Pixel Code Converter</h1>
-  <input type="file" id="fileInput" accept="image/*,video/*">
-  <br>
-  <button id="convertBtn">⚙️ Convert</button>
-  <button id="exportBtn">💾 Lưu ảnh</button>
-  <button id="exportTextBtn">📄 Xuất mã ASCII</button>
-  <button id="exportVideoBtn">🎥 Ghi video pixel</button>
-  <div id="output"></div>  <script src="ascii.js"></script>  <script src="export.js"></script></body>
+  <h1>🎨 ASCII Converter Pro Max</h1>
+
+  <input type="file" id="fileInput" accept="image/*,video/*" />
+  <div class="btns">
+    <button onclick="exportImage()">💾 Lưu ảnh</button>
+    <button onclick="startRecording()">🔴 Ghi video</button>
+    <button onclick="stopRecording()">⏹️ Dừng ghi & Lưu</button>
+  </div>
+
+  <div id="output"></div>
+
+  <script src="ascii.js"></script>
+  <script src="export.js"></script>
+</body>
 </html>
